--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
 <h1>BingusLand</h1>
 <p>Bingus para el profe</p>
- <img src="https://static.wikia.nocookie.net/floppapedia-revamped/images/5/5f/ActualBingus.jpg/revision/latest?cb=20211029014151" alt="Bingus">
+  <img src="https://static.wikia.nocookie.net/floppapedia-revamped/images/5/5f/ActualBingus.jpg/revision/latest?cb=20211029014151" alt="Bingus" style="width:500px;height:600px;">
   </body>
 </html>
