--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
 <h1>BingusLand</h1>
 <p>Bingus para el profe</p>
-  <img src="https://media-cdn.tripadvisor.com/media/photo-s/1d/22/50/ae/this-place-is-probably.jpg alt="Bingus" style="width:500px;height:600px;">
+  <img src="https://media-cdn.tripadvisor.com/media/photo-s/1d/22/50/ae/this-place-is-probably.jpg">
   </body>
 </html>
