--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 <h1>BingusLand</h1>
-<p>Bingus para el profe</p>
+<p>Gif de Bingus para el profe</p>
   <img src="https://media.tenor.com/ejF6ZwW4lXcAAAAM/bingus.gif">
   </body>
 </html>
